fix: Invisible button style on edit page

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -502,7 +502,6 @@ input[type="file"] {border: 0; padding-left: 0; padding-right: 0; height: initia
 input[type="submit"], button[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
-  background-color: #fff;
   height: 28px;
   -webkit-transition: background-color 100ms linear;
   -moz-transition: background-color 100ms linear;
